careride_back/deploy/test/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-careride
spec:
  selector:
    app: mysql-careride
  type: NodePort
  ports:
    - port: 3306
      name: mysql-careride
      nodePort: 29963
