careride_back/deploy/test/service-carerideback.yaml
apiVersion: v1
kind: Service
metadata:
  name: careride-back
  namespace: default
spec:
  selector:
    app: careride-back
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
